[package]
name = "statmuse-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.16"
bincode = "1.3.3"
color-eyre = "0.6.2"
dotenv = "0.15.0"
futures = "0.3.24"
log = { version = "0.4.17", features = ["kv_unstable_std"] }
once_cell = "1.15.0"
regex = "1.6.0"
reqwest = "0.11.12"
scraper = "0.13.0"
serde = { version = "1.0.145", features = ["derive"] }
sled = "0.34.7"
thiserror = "1.0.37"
tokio = { version = "1.24.2", features = ["full"] }
tower-http = { version = "0.3.4", features = ["trace"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
twitter-v2 = "0.1.7"
